# jyablonski_praq

./: .bumpversion.cfg  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  Pipfile  README.md  VERSION  airflow_dev_prod_tasks.py  aws_minimal_example.ipynb  bbref_webscrape.ipynb  bbref_webscrape.py  dbt_api_prac.ipynb  df.html  dict_comprehension.ipynb  exception_handling.ipynb  extra_sql_scrapes.ipynb  fix_names.ipynb  gmail_final.ipynb  google_api_prac.ipynb  gpsread.ipynb  hash_prac.ipynb  jacobs_notes.md  lambda_function.py  lambda_function2.py  list_comprehension.ipynb  main.ipynb  main.py  new.py  new_lambda.ipynb  new_test.py  odds_troubleshoot.ipynb  oop.ipynb  oop1.ipynb  postgres_prac.ipynb  pure_lambda.py  pushshift_api_prac.ipynb  pyproject.toml  pytest_prac.ipynb  (+23 more)
ad_hoc_nba/: airflow_dev_prod_tasks.py  get_contracts_script.py  main.ipynb  player_headshots.py  preseason_odds.py
ai/: emoji_tester.py  link-cursor-to-vscode.sh
airbyte/: apuntes.md
algorithms/: backtrack_dynamic_programming.py  dynamic_programming_basketball.py  merge_sort.py  quick_sort.py  sorting.py
api_auth/: .env.example
api_gateway/: api_gateway.ipynb
ast/: main.py
async/: README.md  docker-compose.yaml
azure/: apuntes.md  blob_storage.py
bash/: apuntes.md  greeting.sh
book_notes/: data_intensive_apps.md  gitlab_notes.md  neo4j_notes.md  sql_notes.md  streaming_notes.md
c++/: apuntes.md  double_function.cpp
case_studies/: spotify.md
claude/: main.py
click/: main.py
cloudwatch/: main.py
comprehend/: prac.ipynb
concurrency/: asyncio_v2.py  asyncio_v3.py  concurrency_notes.md  concurrency_praq.py  python_execution.py  threading_prac_async.py  threading_prac_normal.py  web_scrape.py
creative/: boxes.py  test.py
csv_split/: my_new_split_file_1.csv  my_new_split_file_2.csv  my_new_split_file_3.csv  my_new_split_file_4.csv  my_new_split_file_5.csv
dagster-quickstart/: README.md
data/: utils.py
dbeaver/: README.md  org.eclipse.team.ui.prefs  org.eclipse.ui.editors.prefs
dbt_api/: dbt_api_prac.ipynb
discord/: main.ipynb
dlt/: README.md  game_types.py
dms/: apuntes.md
docker/: docker-compose-postgres.yml  postgres_bootstrap.sql
duck_db/: file_load_example.py  iceburger_support.py  main.py  utils.py
dvc/: README.md
dynamodb/: main.ipynb  new_proj.py
dynamodb_prac/: dynamodb_notes.md  main.ipynb  new_proj.ipynb  new_proj.py
elasticsearch/: main.ipynb  opensearch_logging.py
embeddings/: docker-compose.yml
faker/: apuntes.md  main.py
faker/docker/: lambda_function.py  pyproject.toml
fan_d/: fanduel_python.ipynb
fides/: apuntes.md  pyproject.toml
forecast/: compare_methods.py  comparison_notes.py
forecasting/: README.md  requirements.txt  test.py  test_ensemble.py  test_statsforecast.py  test_statsmodels.py  walk_forward_cv.py
generic_python/: 10_problems.py  advanced_exceptions_yo.py  array_questions.ipynb  binary_search.ipynb  binary_search.py  bit_bytes.py  calendar_class.py  callables.py  conditional_imports.py  csv_split.ipynb  dataclasses_praq.py  decorators_prac.ipynb  decorators_praq.py  dict_comprehension.ipynb  dir_cheq.py  dis_mfer.py  dp_test.py  dummy_file1.py  generators_vs_iterators.py  generics_mfer.py  gross_python.py  hash_prac.ipynb  http_requests.py  in_and_not_in_efficiency.py  itera.py  list_comprehension.ipynb  mapping_errors.py  nba_test.ipynb  nd_json_prac.ipynb  nested_vs_deep_copy.py  numpy_arrays.py  oop1.ipynb  oop2.ipynb  oop_advanced.ipynb  oop_dataclass.py  oop_notes.md  package_memory_usage.py  pandas_mismatch_joins.py  pandas_operations.ipynb  pandas_ops.py  (+21 more)
geospatial/: README.md  python_example.py  sql_example.sql
git/: apuntes.md
github/: github_notes.md  main.ipynb
gmail/: README.md  main.py
go/: apuntes.md  http_stuff.go  sql_read.go
google_api/: README.md  gmail_final.ipynb  google_form_scrapying_v2.py
hackerrank/: the_report.sql
instructor/: README.md  main.py
instructor_praq/: README.md
kinesis/: firehose_writes.ipynb  main.ipynb  notes.md
kubernetes/: a_cloud_guru_guide.md  apuntes.md  install.md
leetcode/: 1094_car_pooling.py  112_path_sum.py  113_path_sum_dos.py  1143_longest_common_subsequence.py  1160_find_words_formed_by_chars.py  118_pascals_triangle.py  119_pascals_triangle_2.py  11_container_with_most_water.py  121_stock.py  129_sum_root_to_leaf_numbers.py  12_integer_to_roman.py  133_copy_graph.py  134_gas_station.py  139_word_break.py  13_roman_integer.py  141_linked_list_cycle.py  1455_word_prefix.py  148_sort_list.py  151_reverse_words_in_string.py  152_maximum_product_subarray.py  153_find_min_in_rotated_sorted_array.py  15_three_sum.py  164_maximum_gap.py  167_two_sum_2_input_array_sorted.py  168_excel_sheet_column_title.py  169_majority_element.py  17_letter_combinations.py  198_house_robber.py  199_binary_tree_right_side.py  19_remove_nth_node_from_linked_list.py  1_two_sum.py  202_happy_number.py  206_reverse_linked_list.py  20_valid_parantheses.py  211_design_word_structure.py  213_house_robber_2.py  219_contains_duplicate_2.py  21_merge_two_sorted_lists.py  226_invert_binary_tree.py  2273_find_resultant_array_after_removing_anagrams.py  (+73 more)
leetcode_75/: 119_pascals_triangle_2.py  121_stock.py  125_valid_palindrome.py  13_roman_integer.py  14_longest_common_prefix.py  1512_number_of_good_pairs  152_maximum_product_subarray.py  198_house_robber.py  1_two_sum.py  20_valid_parantheses.py  217_contains_duplicate.py  22_generate_parantheses.py  242_valid_anagram.py  26_remove_duplicates_from_sorted_array.py  322_coin_change.py  3_longest_substring.py  (+5 more)
ml/hack/services/experiments/: pyproject.toml
ml/hack/services/experiments/src/: data_generator.py  main.py  model_train.py  model_wrapper.py
poetry_praq/: README.md  app.py  install_packages.sh  pyproject.toml
sql/retl-swap-benchmark/: docker-compose.yml  pyproject.toml
sql/retl-swap-benchmark/benchmark/: cli.py  config.py  schema.py  verify.py
sql/retl-swap-benchmark/tests/: test_schema.py
tools/apis-integrations/slack/bot/: README.md  main.py  pyproject.toml
(+1165 files in other folders)
