[project]
name = "jyablonski-praq"
version = "2.8.12"
description = "Practice Repo"
authors = [{ name = "jyablonski9", email = "jyablonski9@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "pandas>=2.0.3,<3",
    "gspread>=5.11.2,<6",
    "boto3>=1.28.57,<2",
    "jyablonski-common-modules>=0.0.7,<1",
    "thefuzz>=0.20.0,<0.21",
    "better-profanity>=0.7.0,<0.8",
    "aiohttp>=3.8.6,<4",
    "polars>=1.2.0,<2",
    "mypy>=1.6.1,<2",
    "opensearch-logger>=1.2.3,<2",
    "faker>=20.0.3,<21",
    "awswrangler>=3.4.2,<4",
    "memory-profiler>=0.61.0,<0.62",
    "bs4>=0.0.1,<0.0.2",
    "nltk>=3.8.1,<4",
    "praw>=7.7.1,<8",
    "sentry-sdk>=1.38.0,<2",
    "tweepy>=4.14.0,<5",
    "jsonpath-ng>=1.6.0,<2",
    "matplotlib>=3.8.2,<4",
    "connectorx>=0.3.2,<0.4",
    "rapidfuzz>=3.6.2,<4",
    "alt-profanity-check>=1.5.0,<2",
    "gensim>=4.3.2,<5",
    "redis>=5.0.8,<6",
    "s3fs>=2024.6.1,<2025",
    "bertopic>=0.16.3,<0.17",
    "click>=8.1.7,<9",
    "structlog>=24.4.0,<25",
    "duckdb==1.2.1",
    "google-auth>=2.38.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "google-api-python-client>=2.167.0",
    "snowflake-sqlalchemy>=1.7.3",
    "sqlalchemy>=2.0.40",
    "snowflake-connector-python>=3.14.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.25.2,<7",
    "ruff>=0.4.4,<0.5",
    "moto[all]>=5.0.9,<6",
    "pytest>=8.1.1,<9",
    "pytest-mock>=3.14.0,<4",
    "pytest-cov>=5.0.0,<6",
    "notebook>=7.2.2,<8",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
