[project]
name = "jyablonski-praq"
version = "2.8.12"
description = "Practice Repo"
authors = [{ name = "jyablonski9", email = "jyablonski9@gmail.com" }]
requires-python = ">=3.12.0, <3.13"
readme = "README.md"
dependencies = [
    "pandas>=2.0.3",
    "gspread>=5.11.2",
    "boto3>=1.28.57",
    "jyablonski-common-modules>=0.0.7",
    "thefuzz>=0.20.0",
    "better-profanity>=0.7.0",
    "aiohttp>=3.8.6",
    "polars>=1.2.0",
    "mypy>=1.6.1",
    "opensearch-logger>=1.2.3",
    "faker>=20.0.3",
    "awswrangler>=3.4.2",
    "memory-profiler>=0.61.0",
    "bs4>=0.0.1",
    "nltk>=3.8.1",
    "praw>=7.7.1",
    "sentry-sdk>=1.38.0",
    "tweepy>=4.14.0",
    "jsonpath-ng>=1.6.0",
    "matplotlib>=3.8.2",
    "connectorx>=0.3.2",
    "rapidfuzz>=3.6.2",
    "alt-profanity-check>=1.5.0",
    "gensim>=4.3.2",
    "redis>=5.0.8",
    "s3fs>=2024.6.1",
    "click>=8.1.7",
    "structlog>=24.4.0",
    "duckdb==1.2.1",
    "google-auth>=2.38.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "google-api-python-client>=2.167.0",
    "snowflake-sqlalchemy>=1.7.3",
    "sqlalchemy>=2.0.40",
    "snowflake-connector-python>=3.14.1",
    "google-genai>=1.20.0",
    "jsonref>=1.1.0",
    "google-generativeai>=0.8.5",
    "instructor>=1.8.3",
    "diagrams>=0.24.4",
    "lxml>=6.0.0",
    "dlt>=1.15.0",
    "streamlit>=1.48.1",
    "nba-api>=1.10.2",
    "vortex-data>=0.53.0",
    "mlflow>=3.6.0",
    "scikit-learn>=1.7.2",
    "mcp>=1.22.0",
    "starlette>=0.50.0",
    "uvicorn>=0.38.0",
    "reportlab>=4.4.9",
    "statsmodels>=0.14.6",
    "prophet>=1.3.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.25.2",
    "ruff>=0.4.4",
    "moto[all]>=5.0.9",
    "pytest>=8.1.1",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "notebook>=7.2.2",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "mcp/mcp-rag-server",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
ignore = ["E741"]
