[tool.poetry]
name = "jyablonski-fides"
version = "0.0.1"
description = ""
authors = ["jyablonski9 <jyablonski9@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
ethyca-fides = "^2.42.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
