[tool.poetry]
name = "practice-app"
version = "0.1.0"
description = ""
authors = ["jyablonski9 <jyablonski9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"
jyablonski-common-modules = "^0.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
