[project]
name = "experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlflow>=3.3.1",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.7.1",
]

[dependency-groups]
dev = ["psutil>=7.0.0", "pytest>=8.4.1", "pytest-cov>=6.2.1"]
local = ["ipykernel>=6.30.1"]
