[project]
name = "slack-incident-bot"
version = "0.1.0"
description = "FastAPI Slack slash command app for creating incident channels"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.9",
    "slack-sdk>=3.35.0",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py"]

[tool.hatch.build.targets.wheel.sources]
"." = ""
